@@ -237,7 +237,7 @@ int neb_load_module(nebmodule *mod){
 
 	/* run the module's init function */
 	initfunc=mod->init_func;
-	result=(*initfunc)(NEBMODULE_NORMAL_LOAD,mod->args,mod);
+	result=(*initfunc)(NEBMODULE_NORMAL_LOAD,mod->args,mod->module_handle);
 
 	/* if the init function returned an error, unload the module */
 	if(result!=OK){
@@ -321,6 +321,9 @@ int neb_unload_module(nebmodule *mod, int flags, int reason){
 			return ERROR;
 	        }
 
+	/* deregister all of the module's callbacks */
+	neb_deregister_module_callbacks(mod);
+
 	/* unload the module */
 #ifdef USE_LTDL
 	result=lt_dlclose(mod->module_handle);
@@ -389,7 +392,8 @@ int neb_set_module_info(void *handle, int type, char *data){
 /****************************************************************************/
 
 /* allows a module to register a callback function */
-int neb_register_callback(int callback_type, int priority, int (*callback_func)(int,void *)){
+int neb_register_callback(int callback_type, void *mod_handle, int priority, int (*callback_func)(int,void *)){
+	nebmodule *temp_module;
 	nebcallback *new_callback;
 	nebcallback *temp_callback;
 	nebcallback *last_callback;
@@ -400,9 +404,20 @@ int neb_register_callback(int callback_type, int priority, int (*callback_func)(
 	if(neb_callback_list==NULL)
 		return NEBERROR_NOCALLBACKLIST;
 
+	if(mod_handle==NULL)
+		return NEBERROR_NOMODULEHANDLE;
+
 	/* make sure the callback type is within bounds */
 	if(callback_type<0 || callback_type>=NEBCALLBACK_NUMITEMS)
 		return NEBERROR_CALLBACKBOUNDS;
+
+	/* make sure module handle is valid */
+	for(temp_module=neb_module_list;temp_module;temp_module=temp_module->next){
+		if((void *)temp_module->module_handle==(void *)mod_handle)
+			break;
+	        }
+	if(temp_module==NULL)
+		return NEBERROR_BADMODULEHANDLE;
 
 	/* allocate memory */
 	new_callback=(nebcallback *)malloc(sizeof(nebcallback));
@@ -410,6 +425,7 @@ int neb_register_callback(int callback_type, int priority, int (*callback_func)(
 		return NEBERROR_NOMEM;
 	
 	new_callback->priority=priority;
+	new_callback->module_handle=(void *)mod_handle;
 	new_callback->callback_func=(void *)callback_func;
 
 	/* add new function to callback list, sorted by priority (first come, first served for same priority) */
@@ -433,6 +449,33 @@ int neb_register_callback(int callback_type, int priority, int (*callback_func)(
 				last_callback->next=new_callback;
 			        }
 		        }
+	        }
+
+	return OK;
+        }
+
+
+
+/* dregisters all callback functions for a given module */
+int neb_deregister_module_callbacks(nebmodule *mod){
+	nebcallback *temp_callback;
+	nebcallback *next_callback;
+	int callback_type;
+
+	if(mod==NULL)
+		return NEBERROR_NOMODULE;
+
+	if(neb_callback_list==NULL)
+		return OK;
+
+	for(callback_type=0;callback_type<NEBCALLBACK_NUMITEMS;callback_type++){
+		for(temp_callback=neb_callback_list[callback_type];temp_callback!=NULL;temp_callback=next_callback){
+			printf("TEMP_CALLBACK: %x\n",temp_callback);
+			next_callback=temp_callback->next;
+			if((void *)temp_callback->module_handle==(void *)mod->module_handle)
+				neb_deregister_callback(callback_type,temp_callback->callback_func);
+		        }
+
 	        }
 
 	return OK;
@@ -543,7 +586,6 @@ int neb_free_callback_list(void){
 		for(temp_callback=neb_callback_list[x];temp_callback!=NULL;temp_callback=next_callback){
 			next_callback=temp_callback->next;
 			free(temp_callback);
-			temp_callback=next_callback;
 	                }
 
 		neb_callback_list[x]=NULL;
