@@ -31,6 +31,7 @@
 #include "../include/statusdata.h"
 #include "../include/nagios.h"
 #include "../include/sretention.h"
+#include "../include/broker.h"
 
 extern int            retain_state_information;
 
@@ -54,6 +55,7 @@ extern int            retain_state_information;
 /* save all host and service state information */
 int save_state_information(char *main_config_file, int autosave){
 	char buffer[MAX_INPUT_BUFFER];
+	int result=OK;
 
 #ifdef DEBUG0
 	printf("save_state_information() start\n");
@@ -62,11 +64,23 @@ int save_state_information(char *main_config_file, int autosave){
 	if(retain_state_information==FALSE)
 		return OK;
 
+#ifdef USE_EVENT_BROKER
+	/* send data to event broker */
+	broker_retention_data(NEBTYPE_RETENTIONDATA_STARTSAVE,NEBFLAG_NONE,NEBATTR_NONE,NULL);
+#endif
+
 	/********* IMPLEMENTATION-SPECIFIC OUTPUT FUNCTION ********/
 #ifdef USE_XRDDEFAULT
-	if(xrddefault_save_state_information(main_config_file)==ERROR)
-		return ERROR;
+	result=xrddefault_save_state_information(main_config_file);
 #endif
+
+#ifdef USE_EVENT_BROKER
+	/* send data to event broker */
+	broker_retention_data(NEBTYPE_RETENTIONDATA_ENDSAVE,NEBFLAG_NONE,NEBATTR_NONE,NULL);
+#endif
+
+	if(result==ERROR)
+		return ERROR;
 
 	if(autosave==TRUE){
 		snprintf(buffer,sizeof(buffer),"Auto-save of retention data completed successfully.\n");
@@ -86,6 +100,7 @@ int save_state_information(char *main_config_file, int autosave){
 
 /* reads in initial host and state information */
 int read_initial_state_information(char *main_config_file){
+	int result=OK;
 
 #ifdef DEBUG0
 	printf("read_initial_state_information() start\n");
@@ -94,11 +109,23 @@ int read_initial_state_information(char *main_config_file){
 	if(retain_state_information==FALSE)
 		return OK;
 
+#ifdef USE_EVENT_BROKER
+	/* send data to event broker */
+	broker_retention_data(NEBTYPE_RETENTIONDATA_STARTLOAD,NEBFLAG_NONE,NEBATTR_NONE,NULL);
+#endif
+
 	/********* IMPLEMENTATION-SPECIFIC INPUT FUNCTION ********/
 #ifdef USE_XRDDEFAULT
-	if(xrddefault_read_state_information(main_config_file)==ERROR)
-		return ERROR;
+	result=xrddefault_read_state_information(main_config_file);
 #endif
+
+#ifdef USE_EVENT_BROKER
+	/* send data to event broker */
+	broker_retention_data(NEBTYPE_RETENTIONDATA_ENDLOAD,NEBFLAG_NONE,NEBATTR_NONE,NULL);
+#endif
+
+	if(result==ERROR)
+		return ERROR;
 
 #ifdef DEBUG0
 	printf("read_initial_state_information() end\n");
