@@ -16,6 +16,7 @@ Nagios Change Log
 * Fixed bugs in $LASTHOSTCHECK$ macro (and corresponding on-demand macro)
 * Fixed bugs in status data routines
 * Fixed bug with NULL hostgroup and servicegroup membership
+* Minor change to event broker API to prevent segfaults from unloaded modules
 
 
 
